# alpine-qa-bot

./: .gitignore  .gitlab-ci.yml  README.md  meson.build  meson_options.txt  uncrustify.cfg
alpine-qa-bot/: config.vapi  database.vala  jobs.vala  main.vala  meson.build  poller.vala  server.vala  worker.vala
data/: alpine-qa-bot.config  meson.build  suggestions.json
tests/: database_test.vala  jobs_test.vala  meson.build  poller_test.vala  server_test.vala  test_lib.vala
tests/traces/jobs/: merge_request_job
tests/traces/poller/: poller_poll  poller_poll_unmark_failed_ci  poller_poll_unmark_stale
tests/traces/server/: server_invalid_token_access_denied  server_merge_request_job_process
